lwb-specific-implementations/monticore-scolar-instance/mc-language-component-tool/src/test/resources/cocos/invalid/ReferencedRuleInPPDoesNotExist.comp
package cocos.invalid;

language component ReferencedRuleInPPDoesNotExist {

  grammar mc.lang.G1;

  provides production A for N;

}